0.5.4 (currently working on)
- [#1266] Fix: Labels for buttons cannot be set via TS setup
- [#1316] Feature: In mod2 also show timed events
- [#1315] Feature: In tx_seminars_bag allow to ignore the timing of records
- [#1180] Feature: Modify tx_seminars_objectfromdb::getRecordIcon() so it returns hidden and timed icons
- [#1314] Fix: tx_seminars_organizers.email shouldn't be an exclude field

0.5.3 (released 2007-11-01)
- [#1225] Fix: Missing empty line in confirmation mail
- [#1060] Fix: Wrong error message on "my VIP events" list if not logged in
- [#1228] Fix: The fax number doesn't have a label in the notification e-mails
- [#1037] Provide a German tutorial/manual
- [#1195] Fix: List view column "list of registrations" is visible in the "subsequent events" list
- [#636] Change: Remove surplus empty parameters from exec_SELECTquery calls, patch by Saskia Metzler
- [#903] Change: Add scope="col" to TH elements in the list view, patch by Saskia Metzler
- [#412] Change: Use the config getter instead of the registration manager in pi1::searchWhere to retrieve configuration data from plugin.tx_seminars
- [#1162] Fix: Cannot register for open-ended events
- [#1058] Change: Added helper function to convert boolean values into text
- [#257] Change: Catch empty config value for event type
- [#1149] Fix: Registrations in mod2 show the event date's title instead of the topic title
- [#501] Change: Changed all locallang*.php references to locallang*.xml
- [#212] Fix: Fallback to default language doesn't work consistently
- [#1222] Fix: In the template helper class, provide default values for templateCode and markerNames
- [#1108] Fix: Number of seats in the "my events" view is incorrect for multi-registration events
- [#1096] Fix: Wrong message in configcheck::hideFields()
- [#1097] Fix: Config check warning if sr_feuser_register is not installed
- [#1093] Fix: Problem with the description of speakers in the seminar single view