@@ -1,4 +1,5 @@
 0.5.4 (currently working on)
+- [#1294] Fix: Installing seminars without FORMidable will break BE login
 - [#1266] Fix: Labels for buttons cannot be set via TS setup
 - [#1316] Feature: In mod2 also show timed events
 - [#1315] Feature: In tx_seminars_bag allow to ignore the timing of records
